; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/mISDN/extr_mISDNinfineon.c_gazel_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/mISDN/extr_mISDNinfineon.c_gazel_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inf_hw = type { i32, i32 }

@irqloops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @gazel_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gazel_irq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.inf_hw*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.inf_hw*
  store %struct.inf_hw* %8, %struct.inf_hw** %5, align 8
  %9 = load %struct.inf_hw*, %struct.inf_hw** %5, align 8
  %10 = getelementptr inbounds %struct.inf_hw, %struct.inf_hw* %9, i32 0, i32 0
  %11 = call i32 @spin_lock(i32* %10)
  %12 = load %struct.inf_hw*, %struct.inf_hw** %5, align 8
  %13 = getelementptr inbounds %struct.inf_hw, %struct.inf_hw* %12, i32 0, i32 1
  %14 = load i32, i32* @irqloops, align 4
  %15 = call i32 @mISDNipac_irq(i32* %13, i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load %struct.inf_hw*, %struct.inf_hw** %5, align 8
  %17 = getelementptr inbounds %struct.inf_hw, %struct.inf_hw* %16, i32 0, i32 0
  %18 = call i32 @spin_unlock(i32* %17)
  %19 = load i32, i32* %6, align 4
  ret i32 %19
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @mISDNipac_irq(i32*, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
